--- a/exploration/exploration.ipynb
+++ b/exploration/exploration.ipynb
@@ -13,8 +13,7 @@
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import numpy as np\n",
-    "import math"
+    "import numpy as np"
    ]
   },
   {
@@ -236,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
