--- a/exploration/exploration.ipynb
+++ b/exploration/exploration.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "# find 10 closest stations to each station\n",
     "number_of_connections = 5\n",
-    "closest_stations = np.argsort(distance_matrix, axis=1)[:,:number_of_connections+1] + 1 # add 1 to make it start from 1"
+    "closest_stations = np.argsort(distance_matrix, axis=1)[:,:number_of_connections+1]"
    ]
   },
   {
