💡 new ideas added to TODOs

--- a/exploration/missing_data.ipynb
+++ b/exploration/missing_data.ipynb
@@ -18,8 +18,11 @@
     }
    ],
    "source": [
+    "# Used to import the helper functions\n",
+    "import sys\n",
+    "sys.path.append('../utils')\n",
+    "from helpers import load_data, load_stations\n",
     "\n",
-    "from helpers.import_data import *\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
