--- a/gnn/gnn.ipynb
+++ b/gnn/gnn.ipynb
@@ -14,24 +14,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-06-02T13:10:52.540456Z",
+     "start_time": "2023-06-02T13:10:49.933450Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Set Notebook Name for WandB\n",
     "import os\n",
-    "os.environ['WANDB_NOTEBOOK_NAME'] = 'gnn.ipynb'"
+    "os.environ['WANDB_NOTEBOOK_NAME'] = 'gnn.ipynb'\n",
+    "import sys\n",
+    "sys.path.append('../utils')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
+    "id": "wNM6n3pzxXes",
     "ExecuteTime": {
-     "end_time": "2023-05-25T22:32:46.883841Z",
-     "start_time": "2023-05-25T22:32:46.222127Z"
-    },
-    "id": "wNM6n3pzxXes"
+     "end_time": "2023-06-02T13:11:12.559047Z",
+     "start_time": "2023-06-02T13:11:12.197133Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -70,13 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
+    "id": "a4YlQ6WXxXet",
     "ExecuteTime": {
-     "end_time": "2023-05-25T22:33:25.274277Z",
-     "start_time": "2023-05-25T22:33:17.750095Z"
-    },
-    "id": "a4YlQ6WXxXet"
+     "end_time": "2023-06-02T13:11:25.979482Z",
+     "start_time": "2023-06-02T13:11:17.485857Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -123,12 +130,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-25T22:40:01.945004Z",
-     "start_time": "2023-05-25T22:39:13.566162Z"
-    },
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
@@ -143,14 +146,31 @@
      "user_tz": -120
     },
     "id": "VjSzAVBUxXeu",
-    "outputId": "1c8425f2-2768-4f78-aec9-b2e5a942bac9"
+    "outputId": "1c8425f2-2768-4f78-aec9-b2e5a942bac9",
+    "ExecuteTime": {
+     "start_time": "2023-06-02T13:11:25.980092Z"
+    }
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3530/3530 [00:27<00:00, 129.28it/s]\n"
+      " 93%|█████████▎| 3298/3530 [00:21<00:01, 153.81it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[8], line 11\u001B[0m\n\u001B[1;32m      9\u001B[0m torch_data \u001B[38;5;241m=\u001B[39m []\n\u001B[1;32m     10\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m date \u001B[38;5;129;01min\u001B[39;00m tqdm(data[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdate\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39munique()):\n\u001B[0;32m---> 11\u001B[0m     torch_data\u001B[38;5;241m.\u001B[39mappend(\u001B[43mcreate_data\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdf\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mnormalized_data\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdate\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdate\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mmask\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mmask\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdist_matrix\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdist_matrix\u001B[49m\u001B[43m)\u001B[49m)\n",
+      "File \u001B[0;32m~/GNN/gnn/../utils/helpers.py:137\u001B[0m, in \u001B[0;36mcreate_data\u001B[0;34m(df, date, mask, dist_matrix)\u001B[0m\n\u001B[1;32m    123\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m    124\u001B[0m \u001B[38;5;124;03mCreate a PyTorch Geometric Data object from a given date.\u001B[39;00m\n\u001B[1;32m    125\u001B[0m \n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    134\u001B[0m \u001B[38;5;124;03m    Data: PyTorch Geometric Data object\u001B[39;00m\n\u001B[1;32m    135\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m    136\u001B[0m \u001B[38;5;66;03m# Get the rows of the dataframe corresponding to the current date\u001B[39;00m\n\u001B[0;32m--> 137\u001B[0m df \u001B[38;5;241m=\u001B[39m \u001B[43mdf\u001B[49m\u001B[43m[\u001B[49m\u001B[43mdf\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mdate\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m==\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mdate\u001B[49m\u001B[43m]\u001B[49m\n\u001B[1;32m    139\u001B[0m \u001B[38;5;66;03m# Get the stations that reported for the current date\u001B[39;00m\n\u001B[1;32m    140\u001B[0m reporting_stations \u001B[38;5;241m=\u001B[39m df[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mstation\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39mto_numpy()\n",
+      "File \u001B[0;32m~/.conda/envs/GNN2/lib/python3.10/site-packages/pandas/core/frame.py:3798\u001B[0m, in \u001B[0;36mDataFrame.__getitem__\u001B[0;34m(self, key)\u001B[0m\n\u001B[1;32m   3796\u001B[0m \u001B[38;5;66;03m# Do we have a (boolean) 1d indexer?\u001B[39;00m\n\u001B[1;32m   3797\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m com\u001B[38;5;241m.\u001B[39mis_bool_indexer(key):\n\u001B[0;32m-> 3798\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_getitem_bool_array\u001B[49m\u001B[43m(\u001B[49m\u001B[43mkey\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   3800\u001B[0m \u001B[38;5;66;03m# We are left with two options: a single key, and a collection of keys,\u001B[39;00m\n\u001B[1;32m   3801\u001B[0m \u001B[38;5;66;03m# We interpret tuples as collections only for non-MultiIndex\u001B[39;00m\n\u001B[1;32m   3802\u001B[0m is_single_key \u001B[38;5;241m=\u001B[39m \u001B[38;5;28misinstance\u001B[39m(key, \u001B[38;5;28mtuple\u001B[39m) \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m is_list_like(key)\n",
+      "File \u001B[0;32m~/.conda/envs/GNN2/lib/python3.10/site-packages/pandas/core/frame.py:3852\u001B[0m, in \u001B[0;36mDataFrame._getitem_bool_array\u001B[0;34m(self, key)\u001B[0m\n\u001B[1;32m   3849\u001B[0m \u001B[38;5;66;03m# check_bool_indexer will throw exception if Series key cannot\u001B[39;00m\n\u001B[1;32m   3850\u001B[0m \u001B[38;5;66;03m# be reindexed to match DataFrame rows\u001B[39;00m\n\u001B[1;32m   3851\u001B[0m key \u001B[38;5;241m=\u001B[39m check_bool_indexer(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mindex, key)\n\u001B[0;32m-> 3852\u001B[0m indexer \u001B[38;5;241m=\u001B[39m \u001B[43mkey\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mnonzero\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m[\u001B[38;5;241m0\u001B[39m]\n\u001B[1;32m   3853\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_take_with_is_copy(indexer, axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m)\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
@@ -604,7 +624,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mfeik\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+      "\u001B[34m\u001B[1mwandb\u001B[0m: Currently logged in as: \u001B[33mfeik\u001B[0m. Use \u001B[1m`wandb login --relogin`\u001B[0m to force relogin\n"
      ]
     },
     {
