--- a/slerch_test/RL18_replication.ipynb
+++ b/slerch_test/RL18_replication.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read data (can be downloaded from https://doi.org/10.6084/m9.figshare.13516301.v1)\n",
     "\n",
-    "data = pd.read_feather(path = \"data_RL18.feather\")\n",
+    "data = pd.read_feather(path = \"../data_RL18.feather\")\n",
     "data.station = pd.to_numeric(data.station, downcast = 'integer')\n",
     "\n",
     "# drop soil moisture predictions due to missing values\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,9 +157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [04:53<00:00, 29.33s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.keras.backend import clear_session\n",
     "\n",
@@ -175,9 +183,9 @@
     "test_scores = []\n",
     "preds = []\n",
     "\n",
-    "from tqdm.notebook import tqdm\n",
+    "from tqdm import trange\n",
     "\n",
-    "for i in tqdm(range(nreps)):\n",
+    "for i in trange(nreps):\n",
     "    clear_session()\n",
     "    \n",
     "    features_in = Input(shape=(n_features,))\n",
@@ -189,7 +197,7 @@
     "    x = Dense(n_outputs, activation='linear')(x)\n",
     "    nn_aux_emb = Model(inputs=[features_in, id_in], outputs=x)\n",
     "\n",
-    "    opt = Adam(learning_rate=0.002)\n",
+    "    opt = tf.keras.optimizers.legacy.Adam(learning_rate=0.002)\n",
     "    nn_aux_emb.compile(optimizer=opt, loss=crps_cost_function)\n",
     "    \n",
     "    nn_aux_emb.fit([train_features, train_IDs], train_targets, epochs=15, batch_size=4096, verbose=0)   \n",
@@ -201,20 +209,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.7859877347946167,\n",
+       " 0.8041104674339294,\n",
+       " 0.8042377233505249,\n",
+       " 0.7862673401832581,\n",
+       " 0.7903794050216675,\n",
+       " 0.7985347509384155,\n",
+       " 0.7837149500846863,\n",
+       " 0.7823414206504822,\n",
+       " 0.785747766494751,\n",
+       " 0.7850529551506042]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ensemble test score = 0.7792730119227637\n"
+     ]
+    }
+   ],
    "source": [
     "# evaluate ensemble of models\n",
     "\n",
@@ -262,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
