🧹restructuring and cleanup

--- a/slerch_test/slerch_pytorch.ipynb
+++ b/slerch_test/slerch_pytorch.ipynb
@@ -512,7 +512,10 @@
     "plt.xlabel('Observed Temp.')\n",
     "plt.ylabel('Predicted Temp.')\n",
     "plt.title(f\"Predicted vs. Observed 2-m Temperatures\\nCRPS={err:.4f}\")\n",
-    "plt.savefig(f\"../gnn/plots/predsObs_slerch_small.eps\", format='eps', dpi=300, bbox_inches='tight')"
+    "if small:\n",
+    "    plt.savefig(f\"../gnn/plots/predsObs_slerch_small.eps\", format='eps', dpi=300, bbox_inches='tight')\n",
+    "else:\n",
+    "plt.savefig(f\"../gnn/plots/predsObs_slerch.eps\", format='eps', dpi=300, bbox_inches='tight')"
    ],
    "metadata": {
     "collapsed": false,
@@ -585,7 +588,10 @@
     "plt.hlines(xmin=0,xmax=1, y=1, colors=\"black\", linestyles=\"--\")\n",
     "plt.xlabel('PIT Value')\n",
     "plt.ylabel('Density')\n",
-    "plt.savefig(f\"../gnn/plots/PIT_slerch_small.eps\", format='eps', dpi=300, bbox_inches='tight')"
+    "if small:\n",
+    "    plt.savefig(f\"../gnn/plots/PIT_slerch_small.eps\", format='eps', dpi=300, bbox_inches='tight')\n",
+    "else:\n",
+    "    plt.savefig(f\"../gnn/plots/PIT_slerch.eps\", format='eps', dpi=300, bbox_inches='tight')"
    ],
    "metadata": {
     "collapsed": false,
