--- a/gnn/ensemble_test.ipynb
+++ b/gnn/ensemble_test.ipynb
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import sys\n",
     "import subprocess\n",
     "from multiprocessing import Process\n",
     "\n",
-    "from ensemble_train import crps, create_model\n",
+    "from ensemble_train import crps, create_model_from_config\n",
     "import numpy as np\n",
     "import os\n",
     "import sys\n",
@@ -43,17 +43,17 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-01T14:08:52.989569Z",
-     "start_time": "2023-09-01T14:08:52.984049Z"
+     "end_time": "2023-09-02T12:25:38.705916Z",
+     "start_time": "2023-09-02T12:25:36.721458Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    "ensemble_config = \"experiments/small/best_GraphSage/config.yaml\"\n",
+    "ensemble_config = \"experiments/large/best_GlobalInfo/config.yaml\"\n",
     "\n",
     "with open(ensemble_config, 'r') as config_file:\n",
     "    config = yaml.safe_load(config_file)\n",
@@ -63,8 +63,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-01T14:12:48.128320Z",
-     "start_time": "2023-09-01T14:12:48.121296Z"
+     "end_time": "2023-09-02T12:25:39.505760Z",
+     "start_time": "2023-09-02T12:25:39.498217Z"
     }
    }
   },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -211,7 +211,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creating PyG Data: 100%|██████████| 366/366 [00:03<00:00, 109.01it/s]\n"
+      "Creating PyG Data: 100%|██████████| 366/366 [00:05<00:00, 64.24it/s]\n",
+      "/home/feik/.conda/envs/GNN2/lib/python3.10/site-packages/torch/cuda/__init__.py:546: UserWarning: Can't initialize NVML\n",
+      "  warnings.warn(\"Can't initialize NVML\")\n"
      ]
     }
    ],
@@ -267,14 +269,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-01T14:13:03.911032Z",
-     "start_time": "2023-09-01T14:12:52.222262Z"
+     "end_time": "2023-09-02T12:27:32.614008Z",
+     "start_time": "2023-09-02T12:27:15.227935Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def get_models_from_checkpoints():\n",
@@ -283,14 +285,15 @@
     "    model_list = []\n",
     "    for snapshot in os.listdir(f\"{os.path.dirname(ensemble_config)}/checkpoints\"):\n",
     "        path_to_snapshot = f\"{os.path.dirname(ensemble_config)}/checkpoints/{snapshot}\"\n",
-    "        model = create_model(config, emb_num_features)\n",
+    "        model, optimizer, _ = create_model_from_config(config, emb_num_features, device)\n",
     "        try:\n",
     "            checkpoint = torch.load(path_to_snapshot)\n",
     "            model.load_state_dict(checkpoint['model_state_dict'])\n",
     "            model.to(device)\n",
     "            model_list.append(model)\n",
-    "        except:\n",
-    "            print(f\"could not load {path_to_snapshot}, model architectures do not match\")\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            print(f\"could not load {path_to_snapshot}\")\n",
     "    return model_list\n",
     "\n",
     "def evaluate_ensemble(model_list:list):\n",
@@ -338,30 +341,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-01T14:13:03.911956Z",
-     "start_time": "2023-09-01T14:13:03.911187Z"
+     "end_time": "2023-09-02T12:28:53.577448Z",
+     "start_time": "2023-09-02T12:28:53.571343Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model crps 0.784573495388031\n",
-      "Model crps 0.808352530002594\n",
-      "Model crps 0.8034158945083618\n",
-      "Model crps 0.8158273100852966\n",
-      "Model crps 0.7844380140304565\n",
-      "Model crps 0.7766989469528198\n",
-      "Model crps 0.7826502919197083\n",
-      "Model crps 0.7885094285011292\n",
-      "Model crps 0.7856797575950623\n",
-      "Model crps 0.7933775782585144\n",
-      "Ensemble CRPS: 0.768977701663971\n"
+      "tensor(0.7489, device='cuda:1')\n"
      ]
     }
    ],
@@ -373,8 +366,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-01T14:13:06.257517Z",
-     "start_time": "2023-09-01T14:13:03.911359Z"
+     "end_time": "2023-09-02T12:29:19.866874Z",
+     "start_time": "2023-09-02T12:28:55.821523Z"
     }
    }
   },
