🥳 Plots and ReadMes added

--- a/exploration/crps_plot.ipynb
+++ b/exploration/crps_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import torch\n",
@@ -10,6 +10,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
+    "import cmasher as cmr\n",
     "%matplotlib inline\n",
     "plt.style.use('default')\n",
     "plt.rcParams.update({'font.size': 12})"
@@ -17,19 +18,19 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-31T22:04:16.077348Z",
-     "start_time": "2023-07-31T22:04:16.073310Z"
+     "end_time": "2023-09-13T09:18:50.960125Z",
+     "start_time": "2023-09-13T09:18:49.570899Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-07-31T22:03:20.369264Z",
-     "start_time": "2023-07-31T22:03:20.364428Z"
+     "end_time": "2023-09-13T09:18:53.959438Z",
+     "start_time": "2023-09-13T09:18:53.953426Z"
     }
    },
    "outputs": [],
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "outputs": [
     {
      "data": {
@@ -90,7 +91,7 @@
     "\n",
     "# Create the contour plot\n",
     "plt.figure()\n",
-    "contour_plot = plt.contourf(mu_np, sigma_np, z_np.T, levels=1000, cmap='viridis')\n",
+    "contour_plot = plt.contourf(mu_np, sigma_np, z_np.T, levels=1000, cmap=\"viridis\")\n",
     "\n",
     "for c in contour_plot.collections:\n",
     "    c.set_edgecolor(\"face\")\n",
@@ -109,27 +110,20 @@
     "plt.xlabel('$\\mu$')\n",
     "plt.ylabel('$\\sigma$')\n",
     "plt.title('$\\operatorname{CRPS}$', pad=20)\n",
-    "plt.savefig(\"plots/crps_contour.eps\", format=\"eps\")"
+    "plt.savefig(\"plots/crps_contour.pdf\", format=\"pdf\", dpi=600, bbox_inches='tight')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-31T22:15:20.735485Z",
-     "start_time": "2023-07-31T22:15:18.677598Z"
+     "end_time": "2023-09-13T09:24:59.659109Z",
+     "start_time": "2023-09-13T09:24:56.783015Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": "<Figure size 640x480 with 1 Axes>",
@@ -161,13 +155,13 @@
     "plt.ylim(-0.1, 1.1)  # Adjust the y-axis limits to fit the step function\n",
     "plt.grid()\n",
     "plt.legend()\n",
-    "plt.savefig(\"plots/crps_example_cdfs.eps\", format=\"eps\")"
+    "plt.savefig(\"plots/crps_example_cdfs.pdf\", format=\"pdf\", dpi=600, bbox_inches='tight')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-31T22:15:16.162794Z",
-     "start_time": "2023-07-31T22:15:15.841129Z"
+     "end_time": "2023-09-13T09:25:21.474493Z",
+     "start_time": "2023-09-13T09:25:20.922176Z"
     }
    }
   },
