--- a/gnn/ensemble_eff_of_hyperparams.ipynb
+++ b/gnn/ensemble_eff_of_hyperparams.ipynb
@@ -1,15 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Hyperparameter sensitivity\n",
+    "\n",
+    "In this notebook the sensitivity to changes hyperparameters is tested."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-09-12T12:25:05.912540Z",
-     "start_time": "2023-09-12T12:25:04.013350Z"
-    }
-   },
    "outputs": [],
    "source": [
     "import subprocess\n",
@@ -37,12 +41,19 @@
     "\n",
     "from scipy.stats import norm\n",
     "%matplotlib inline"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-12T12:25:05.912540Z",
+     "start_time": "2023-09-12T12:25:04.013350Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# Load Best Config Files"
+    "## Load Best Config Files"
    ],
    "metadata": {
     "collapsed": false
@@ -156,17 +167,6 @@
    "cell_type": "markdown",
    "source": [
     "# Train Ensembles..."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "#TODO Train hidden channels 512 GlobalInfo again"
    ],
    "metadata": {
     "collapsed": false
@@ -374,10 +374,20 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Select the parameter here:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "outputs": [],
    "source": [
+    "# Put path to folder containing the folders with config files here\n",
     "path = \"experiments/eff_of_hyperparams/hidden_channels\""
    ],
    "metadata": {
