--- a/gnn/ensemble_explain.ipynb
+++ b/gnn/ensemble_explain.ipynb
@@ -1,15 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Explainability of GNNs\n",
+    "\n",
+    "In this Notebook the permutation and gradient based feature importance calculation is implemented."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-09-17T20:42:29.482713Z",
-     "start_time": "2023-09-17T20:42:29.474916Z"
-    }
-   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -33,7 +37,14 @@
     "import helpers\n",
     "\n",
     "%matplotlib inline"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-17T20:42:29.482713Z",
+     "start_time": "2023-09-17T20:42:29.474916Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -41,7 +52,7 @@
     "collapsed": false
    },
    "source": [
-    "# Load Ensemble and Data\n",
+    "## Load Ensemble and Data\n",
     "## Config Files"
    ]
   },
