--- a/gnn/ensemble_test.ipynb
+++ b/gnn/ensemble_test.ipynb
@@ -62,6 +62,7 @@
    },
    "outputs": [],
    "source": [
+    "# Select your config file here!\n",
     "ensemble_config = \"experiments/large/best_GlobalInfo/config.yaml\"\n",
     "\n",
     "with open(ensemble_config, 'r') as config_file:\n",
