--- a/gnn/further_experiments.ipynb
+++ b/gnn/further_experiments.ipynb
@@ -1,15 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Further Experiments\n",
+    "\n",
+    "Note: This notebook contains further experiments that were not pursued further.\n",
+    "\n",
+    "In this Code a model consisting of two separate GNNs is used to predict mu and sigma individually."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-09-14T08:59:07.295250Z",
-     "start_time": "2023-09-14T08:59:07.232320Z"
-    }
-   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -24,7 +30,14 @@
     "\n",
     "sys.path.append('../utils')\n",
     "from helpers import *"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-14T08:59:07.295250Z",
+     "start_time": "2023-09-14T08:59:07.232320Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
