🎆even more comments added

--- a/gnn/further_experiments.ipynb
+++ b/gnn/further_experiments.ipynb
@@ -264,7 +264,7 @@
     "    train_loss = 0.0\n",
     "    # Train loop\n",
     "    for batch in train_loader:\n",
-    "        #batch.to(device)  # TODO remove\n",
+    "        #batch.to(device)  # can be removed if data fits into gpu memory\n",
     "        optimizer.zero_grad()\n",
     "        out = model(batch.x, batch.edge_index, batch.edge_attr, batch_id=batch.batch)\n",
     "        loss = crps(out, batch.y)\n",
